; ModuleID = '/home/carl/AnghaBench/linux/drivers/mtd/ubi/extr_fastmap.c_ubi_calc_fm_size.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mtd/ubi/extr_fastmap.c_ubi_calc_fm_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ubi_device = type { i32, i32 }

@UBI_MAX_VOLUMES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ubi_calc_fm_size(%struct.ubi_device* %0) #0 {
  %2 = alloca %struct.ubi_device*, align 8
  %3 = alloca i64, align 8
  store %struct.ubi_device* %0, %struct.ubi_device** %2, align 8
  %4 = load %struct.ubi_device*, %struct.ubi_device** %2, align 8
  %5 = getelementptr inbounds %struct.ubi_device, %struct.ubi_device* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = sext i32 %6 to i64
  %8 = mul i64 %7, 4
  %9 = add i64 16, %8
  %10 = load %struct.ubi_device*, %struct.ubi_device** %2, align 8
  %11 = getelementptr inbounds %struct.ubi_device, %struct.ubi_device* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = sext i32 %12 to i64
  %14 = mul i64 %13, 4
  %15 = add i64 4, %14
  %16 = add i64 %9, %15
  %17 = load i32, i32* @UBI_MAX_VOLUMES, align 4
  %18 = sext i32 %17 to i64
  %19 = mul i64 4, %18
  %20 = add i64 %16, %19
  store i64 %20, i64* %3, align 8
  %21 = load i64, i64* %3, align 8
  %22 = load %struct.ubi_device*, %struct.ubi_device** %2, align 8
  %23 = getelementptr inbounds %struct.ubi_device, %struct.ubi_device* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = call i64 @roundup(i64 %21, i32 %24)
  ret i64 %25
}

declare dso_local i64 @roundup(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
